Renames and removals

--- a/preamble.tex
+++ b/preamble.tex
@@ -142,7 +142,7 @@
 \newcommand*{\goodset}{\psi_\mathbf{g}}
 \newcommand*{\badset}{\psi_\mathbf{b}}
 \newcommand*{\wonkyset}{\psi_\mathbf{w}}
-\newcommand*{\punishset}{\psi_\mathbf{p}}
+\newcommand*{\offenders}{\psi_\mathbf{o}}
 \newcommand*{\xttickets}{\mathbf{E}_T}
 \newcommand*{\xtdisputes}{\mathbf{E}_D}
 \newcommand*{\xtguarantees}{\mathbf{E}_G}
