--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -125,7 +125,7 @@
   \item[$\mathcal{C}(\dots)$] The group of erasure-coding functions.
   \item[$\mathcal{C}_n(\dots)$] The erasure-coding functions for $n$ chunks. See equation \ref{eq:erasurecoding}.
 %  \item[$\mathcal{D}$] Unused.
-  \item[$\se(\dots)$] The \textsc{scale} encode function. Superscripted ${}^{-1}$ to denote the inverse. See appendix \ref{sec:serialization}.
+  \item[$\se(\dots)$] The octet-sequence encode function. Superscripted ${}^{-1}$ to denote the inverse. See appendix \ref{sec:serialization}.
   \item[$\mathcal{F}(\dots)$] The Fisher-Yates shuffle function. See equation \ref{eq:suffle}.
   \item[$\mathcal{H}(\dots)$] The Blake 2b 256-bit hash function. See section \ref{sec:cryptography}.
   \item[$\mathcal{H}_K(\dots)$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
@@ -215,7 +215,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
     \item[$\badset$] Work-reports judged to be incorrect.
     \item[$\goodset$] Work-reports judged to be correct.
     \item[$\wonkyset$] Work-reports whose validity is judged to be unknowable.
-    \item[$\punishset$] Validators who made a judgement found to be incorrect.
+    \item[$\offenders$] Validators who made a judgement found to be incorrect.
   \end{description}
   \item[$\chi$] The privileged service indices. %	χ
   \begin{description}
