--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -99,12 +99,12 @@ With a new epoch under regular conditions, validator keys get rotated and the ep
   \end{cases} \\
   \nonumber \where z &= \mathcal{O}([k_b \mid k \orderedin \gamma'_\mathbf{k}]) \\
   \label{eq:blacklistfilter} \Phi(\mathbf{k}) &\equiv \sq{
-    \begin{rcases}[0, 0, \dots] &\when k_b \in \punishset' \\ k &\otherwise \end{rcases}
+    \begin{rcases}[0, 0, \dots] &\when k_b \in \offenders' \\ k &\otherwise \end{rcases}
     \,\middle\mid\, k \orderedin \mathbf{k}
   }
 \end{align}
 
-Note that on epoch changes the posterior queued validator key set $\gamma'_k$ is defined such that incoming keys belonging to the judgement punish set $\punishset'$ are replaced with a null key containing only zeroes. The origin of this punish set is explained in section \ref{sec:disputes}.
+Note that on epoch changes the posterior queued validator key set $\gamma'_k$ is defined such that incoming keys belonging to the offenders $\offenders'$ are replaced with a null key containing only zeroes. The origin of the offenders is explained in section \ref{sec:disputes}.
 
 
 
@@ -116,15 +116,15 @@ Note that on epoch changes the posterior queued validator key set $\gamma'_k$ is
 
 The header must contain a valid seal and valid \textsc{vrf} output. These are two signatures both using the current slot's seal key; the message data of the former is the header's serialization omitting the seal component $\mathbf{H}_s$, whereas the latter is used as a bias-resistant entropy source and thus its message must already have been fixed: we use the entropy stemming from the \textsc{vrf} of the seal signature. Formally:
 \begin{align}
-    \nonumber \using i = \gamma_\mathbf{s}[\mathbf{H}_t]^\circlearrowleft\colon \\
+    \nonumber \using i = \gamma'_\mathbf{s}[\mathbf{H}_t]^\circlearrowleft\colon \\
     \label{eq:ticketconditiontrue}
-    \gamma_\mathbf{s} \in \seq{\mathbb{C}} &\implies \left\{\,\begin{aligned}
+    \gamma'_\mathbf{s} \in \seq{\mathbb{C}} &\implies \left\{\,\begin{aligned}
         &i_\mathbf{y} = \banderout{\mathbf{H}_s}\,,\\
         &\mathbf{H}_s \in \bandersig{\mathbf{H}_a}{\mathsf{X}_T \concat \eta_3 \doubleplus i_r}{\mathcal{E}_U(\mathbf{H})}\,,\\
         &\mathbf{T} = 1
     \end{aligned}\right.\\
     \label{eq:ticketconditionfalse}
-    \gamma_\mathbf{s} \in \seq{\H_B} &\implies \left\{\,\begin{aligned}
+    \gamma'_\mathbf{s} \in \seq{\H_B} &\implies \left\{\,\begin{aligned}
         &i = \mathbf{H}_a\,,\\
         &\mathbf{H}_s \in \bandersig{\mathbf{H}_a}{\mathsf{X}_F \concat \eta_3}{\mathcal{E}_U(\mathbf{H})}\,,\\
         &\mathbf{T} = 0
@@ -227,7 +227,7 @@ The winning-tickets marker $\mathbf{H}_w$ is either empty or, if the block is th
   \end{cases}
 \end{align}
 
- Note that this will not be honored if the next epoch begins with a judgement in its extrinsic.
+ Note that this will not be honored if the next epoch begins with a verdict in its extrinsic.
 
 
 
