--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -9,23 +9,25 @@ For each recent block, we retain its header hash, its state root, its accumulati
 
 During the accumulation stage, a value with the partial transition of this state is provided which contains the update for the newly-known roots of the parent block:
 \begin{equation}
-  \beta^\dagger \equiv \beta\quad\exc\beta^\dagger[0]_s = \mathbf{H}_r
+  \beta^\dagger \equiv \beta\quad\exc\quad\beta^\dagger[0]_s = \mathbf{H}_r
 \end{equation}
 
-The final state transition is then:
+We define an item $n$ comprising the new block's header hash, its accumulation-result Merkle tree root and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Note that the accumulation-result tree root $r$ is derived from $\mathbf{C}$ (defined in section \ref{sec:accumulation}) using the basic binary Merklization function $\mathcal{M}_B$ (defined in appendix \ref{sec:merklization}) and appending it using the \textsc{mmr} append function $\mathcal{A}$ (defined in appendix \ref{sec:mmr}) to form a Merkle mountain range.
 \begin{equation}
   \begin{aligned}
-    \beta' &\equiv {\overleftarrow{\beta^\dagger \doubleplus \ltup\;
-    \begin{aligned}
-      &\is{\mathbf{p}}{[((g_w)_s)_p \mid g \orderedin \xtguarantees]}\;\ts\\
-      &\is{h}{\mathcal{H}(\mathbf{H})}\;\ts\ \ \mathbf{b}\;\ts\ \ \is{s}{\H^0}
+    \using r &= \mathcal{M}_B(\orderby{x}{\se(x) \mid x \in \mathbf{C}}, \mathcal{H}_K) \\
+    \using \mathbf{b} &= \mathcal{A}(\text{last}(\sq{\sq{}} \concat \sq{x_\mathbf{b} \mid x \orderedin \beta}), r)\\
+    \using n &= \tup{
+      \is{\mathbf{p}}{[((g_w)_s)_p \mid g \orderedin \xtguarantees]}\ts
+      \is{h}{\mathcal{H}(\mathbf{H})}\ts\mathbf{b}\ts\is{s}{\H^0}
+      }
     \end{aligned}
-    \;\rtup}}^\mathsf{H} \\
-    \where \mathbf{b} &= \mathcal{A}(\text{last}(\sq{\sq{}} \concat \sq{x_\mathbf{b} \mid x \orderedin \beta}), r)\\
-    \also r &= \mathcal{M}_B(\orderby{x}{\se(x) \mid x \in \mathbf{C}}, \mathcal{H}_K)
-  \end{aligned}
-\end{equation}
-
-Thus, we extend the recent history with the new block's header hash, its accumulation-result Merkle tree root and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Note that the accumulation-result tree root $r$ is derived from $\mathbf{C}$ (defined in section \ref{sec:accumulation}) using the basic binary Merklization function $\mathcal{M}_B$ (defined in appendix \ref{sec:merklization}) and appending it using the \textsc{mmr} append function $\mathcal{A}$ (defined in appendix \ref{sec:mmr}) to form a Merkle mountain range.
-
-The state-trie root is as being the zero hash, $\H^0$ which while inaccurate at the end state of the block $\beta'$, it is nevertheless safe since $\beta'$ is not utilized except to define the next block's $\beta^\dagger$, which contains a corrected value for this.
+  \end{equation}
+  
+  The state-trie root is as being the zero hash, $\H^0$ which while inaccurate at the end state of the block $\beta'$, it is nevertheless safe since $\beta'$ is not utilized except to define the next block's $\beta^\dagger$, which contains a corrected value for this.
+  
+  The final state transition is then:
+  \begin{equation}
+    \beta' \equiv {\overleftarrow{\beta^\dagger \doubleplus n}}^\mathsf{H}
+  \end{equation}
+  
