--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -251,8 +251,7 @@ We define the extrinsic as a sequence of proofs of valid tickets, each of which 
   |\xttickets| &\le \begin{cases}
       \mathsf{K} &\when m' < \mathsf{Y} \\
       0 &\otherwise
-  \end{cases}\\
-  \mathsf{X}_T &= \token{\$jam\_ticket\_seal}
+  \end{cases}
 \end{align}
 
 We define $\mathbf{n}$ as the set of new tickets, with the ticket identity, a hash, defined as the output component of the Bandersnatch Ring\textsc{vrf} proof:
