--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -83,7 +83,7 @@ In addition to the active set of validator keys $\kappa$ and staging set $\iota$
 
 We must introduce $\mathbb{K}$, the set of validator key tuples. This is a combination of cryptographic public keys for Bandersnatch and Ed25519 cryptography, and a third metadata key which is an opaque octet sequence, but utilized to specify practical identifiers for the validator, not least a hardware address.
 
-The set of validator keys itself is equivalent to the set of 336-octet sequences. However, for clarity, we divide the sequence into four easily denoted components. For any validator key $k$, the Bandersnatch key is denoted $k_b$, and is equivalent to the first 32-octets; the Ed25519 key, $k_e$, is the second 32 octets; the BLS key denoted $k_{BLS}$ is equivalent to the following 144 octets, and finally the metadata $k_m$ is the last 128 octets. Formally:
+The set of validator keys itself is equivalent to the set of 336-octet sequences. However, for clarity, we divide the sequence into four easily denoted components. For any validator key $k$, the Bandersnatch key is denoted $k_b$, and is equivalent to the first 32-octets; the Ed25519 key, $k_e$, is the second 32 octets; the \textsc{bls} key denoted $k_{BLS}$ is equivalent to the following 144 octets, and finally the metadata $k_m$ is the last 128 octets. Formally:
 \begin{align}
   \mathbb{K} &\equiv \mathbb{Y}_{336} \\
   \forall k \in \mathbb{K} : k_b \in \H_B &\equiv k_{0\dots+32} \\
@@ -95,16 +95,16 @@ The set of validator keys itself is equivalent to the set of 336-octet sequences
 With a new epoch under regular conditions, validator keys get rotated and the epoch's Bandersnatch key root is updated into $\gamma'_z$:
 \begin{align}
   (\gamma'_\mathbf{k}, \kappa', \lambda', \gamma'_z) &\equiv \begin{cases}
-    (\Phi(\iota), \gamma_\mathbf{k}, \kappa, z) &\when e' > e \wedge \mathbf{H}_j = [] \\ (\gamma_\mathbf{k}, \kappa, \lambda, \gamma_z) &\otherwise
+    (\Phi(\iota), \gamma_\mathbf{k}, \kappa, z) &\when e' > e \\ (\gamma_\mathbf{k}, \kappa, \lambda, \gamma_z) &\otherwise
   \end{cases} \\
   \nonumber \where z &= \mathcal{O}([k_b \mid k \orderedin \gamma'_\mathbf{k}]) \\
   \label{eq:blacklistfilter} \Phi(\mathbf{k}) &\equiv \sq{
-    \begin{rcases}[0, 0, \dots] &\when k_b \in \punishset' \\ k &\otherwise \end{rcases}
+    \begin{rcases}[0, 0, \dots] &\when k_b \in \offenders' \\ k &\otherwise \end{rcases}
     \,\middle\mid\, k \orderedin \mathbf{k}
   }
 \end{align}
 
-Note that on epoch changes the posterior queued validator key set $\gamma'_k$ is defined such that incoming keys belonging to the judgement punish set $\punishset'$ are replaced with a null key containing only zeroes. The origin of this punish set is explained in section \ref{sec:disputes}.
+Note that on epoch changes the posterior queued validator key set $\gamma'_k$ is defined such that incoming keys belonging to the offenders $\offenders'$ are replaced with a null key containing only zeroes. The origin of the offenders is explained in section \ref{sec:disputes}.
 
 
 
@@ -120,13 +120,13 @@ The header must contain a valid seal and valid \textsc{vrf} output. These are tw
     \label{eq:ticketconditiontrue}
     \gamma'_\mathbf{s} \in \seq{\mathbb{C}} &\implies \left\{\,\begin{aligned}
         &i_\mathbf{y} = \banderout{\mathbf{H}_s}\,,\\
-        &\mathbf{H}_s \in \bandersig{\mathbf{H}_a}{\mathsf{X}_T \concat \eta'_3 \doubleplus i_r}{\mathcal{E}_U(\mathbf{H})}\,,\\
+        &\mathbf{H}_s \in \bandersig{\mathbf{H}_a}{\mathsf{X}_T \concat \eta_3 \doubleplus i_r}{\mathcal{E}_U(\mathbf{H})}\,,\\
         &\mathbf{T} = 1
     \end{aligned}\right.\\
     \label{eq:ticketconditionfalse}
     \gamma'_\mathbf{s} \in \seq{\H_B} &\implies \left\{\,\begin{aligned}
         &i = \mathbf{H}_a\,,\\
-        &\mathbf{H}_s \in \bandersig{\mathbf{H}_a}{\mathsf{X}_F \concat \eta'_3}{\mathcal{E}_U(\mathbf{H})}\,,\\
+        &\mathbf{H}_s \in \bandersig{\mathbf{H}_a}{\mathsf{X}_F \concat \eta_3}{\mathcal{E}_U(\mathbf{H})}\,,\\
         &\mathbf{T} = 0
     \end{aligned}\right.\\
   \mathbf{H}_v &\in \bandersig{\mathbf{H}_a}{\mathsf{X}_E\frown \banderout{\mathbf{H}_s}}{[]} \\
@@ -168,7 +168,7 @@ On an epoch transition (identified as the condition $e' > e$), we therefore rota
 
 \subsection{The Slot Key Sequence}
 
-The posterior slot key sequence $\gamma'_\mathbf{s}$ is one of three expressions depending on the circumstance of the block. If the block is not the first in an epoch, then it remains unchanged from the prior $\gamma_\mathbf{s}$. If the block signals the next epoch (by epoch index) and the previous block's slot was within the closing period of the previous epoch, then it takes the value of the prior ticket accumulator $\gamma'_\mathbf{a}$. Otherwise, it takes the value of the fallback key sequence. Formally:
+The posterior slot key sequence $\gamma'_\mathbf{s}$ is one of three expressions depending on the circumstance of the block. If the block is not the first in an epoch, then it remains unchanged from the prior $\gamma_\mathbf{s}$. If the block signals the next epoch (by epoch index) and the previous block's slot was within the closing period of the previous epoch, then it takes the value of the prior ticket accumulator $\gamma_\mathbf{a}$. Otherwise, it takes the value of the fallback key sequence. Formally:
 \begin{align}\label{eq:slotkeysequence}
   \gamma'_\mathbf{s} &\equiv \begin{cases}
     Z(\gamma_\mathbf{a}) &\when e' = e + 1 \wedge m' \geq \mathsf{Y} \wedge |\gamma_\mathbf{a}| = \mathsf{E}\!\!\\
@@ -227,9 +227,6 @@ The winning-tickets marker $\mathbf{H}_w$ is either empty or, if the block is th
   \end{cases}
 \end{align}
 
- Note that this will not be honored if the next epoch begins with a judgement in its extrinsic.
-
-
 
 
 
@@ -254,8 +251,7 @@ We define the extrinsic as a sequence of proofs of valid tickets, each of which 
   |\xttickets| &\le \begin{cases}
       \mathsf{K} &\when m' < \mathsf{Y} \\
       0 &\otherwise
-  \end{cases}\\
-  \mathsf{X}_T &= \token{\$jam\_ticket\_seal}
+  \end{cases}
 \end{align}
 
 We define $\mathbf{n}$ as the set of new tickets, with the ticket identity, a hash, defined as the output component of the Bandersnatch Ring\textsc{vrf} proof:
