--- a/text/bandersnatch.tex
+++ b/text/bandersnatch.tex
@@ -12,7 +12,7 @@ The singly-contextualized Bandersnatch Schnorr-like signatures $\bandersig{k}{c}
 The singly-contextualized Bandersnatch Ring\textsc{vrf} proofs $\bandersnatch{r}{c}{m}$ are a zk-\textsc{snark}-enabled analogue utilizing the Pedersen \textsc{vrf}, also defined by \cite{hosseini2024bandersnatch} and further detailed by \cite{cryptoeprint:2023/002}.
 
 \begin{align}
-  \mathcal{O}(\seq{\H_B}) \in \Y_R &\equiv \text{PCS\_commitment}(\seq{\H_B})  \\
+  \mathcal{O}(\seq{\H_B}) \in \Y_R &\equiv \text{KZG\_commitment}(\seq{\H_B})  \\
   \bandersnatch{r \in \Y_R}{c \in \H}{m \in \Y} \subset \Y_{784} &\equiv \{ x \mid x \in \Y_{784}, \text{verify}(r, c, m, \text{decode}(x_{:32}), \text{decode}(x_{32:})) = \top \}  \\
   \banderout{p \in \bandersnatch{r}{c}{m}} \in \H &\equiv \text{hashed\_output}(\text{decode}(x_{:32}) \mid x \in \bandersnatch{r}{c}{m})
 \end{align}
