Include extrinsic lengths in package, bound report timeslot

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -78,7 +78,7 @@ The Refine invocation function also implicitly draws upon some recent head state
       (\token{BAD}, []) &\when s \not\in \keys{\delta} \vee \Lambda(\delta[s], \mathbf{c}_t, c) = \none \\
       (\token{BIG}, []) &\otherwhen |\Lambda(\delta[s], \mathbf{c}_t, c)| > \mathsf{S} \\
       &\otherwise: \\
-      &\quad\using a = \se(s, p, \mathbf{y}, \mathbf{c}, a, \mathbf{o}, \var{\mathbf{x}})\ ,\\
+      &\quad\using a = \se(s, \mathbf{y}, p, \mathbf{c}, a, \mathbf{o}, \var{\mathbf{x}})\ ,\\
       &\quad\also (\mathbf{r}, (\mathbf{m}, \mathbf{e})) = \Psi_M(\Lambda(\delta[s], \mathbf{c}_t, c), 1, g, a, F, (\emptyset, []))\ \colon\\
       (\mathbf{r}, []) &\quad\when \mathbf{r} \in \{ \oog, \panic \}  \\
       (\mathbf{u}, \mathbf{e}) &\quad\when \mathbf{r} = \tup{g, \mathbf{u}} \\
