--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -65,7 +65,7 @@ We begin by defining a \emph{work-package}, of set $\mathbb{P}$, and its constit
   \end{aligned}}
 \end{equation}
 
-A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $y$, a gas limit $g$, and the three elements of its manifest, a sequence of imported data segments $\mathbf{i}$ identified by the root of the \emph{segments tree} and an index into it, $\mathbf{x}$, a sequence of hashed of data segments to be introduced in this block (and which we assume the validator knows) and $e$ the number of data segments exported by this work item:
+A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $y$, a gas limit $g$, and the three elements of its manifest, a sequence of imported data segments $\mathbf{i}$ identified by the root of the \emph{segments tree} and an index into it, $\mathbf{x}$, a sequence of hashed of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $e$ the number of data segments exported by this work item:
 \begin{equation}\label{eq:workitem}
     \mathbb{I} \equiv \tuple{\begin{aligned}
       &\isa{s}{\N_S} \ts
