Further simplify instruction decoding equations

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -242,12 +242,10 @@ We assume the skip length $\ell$ is well-defined:
 \subsubsection{Instructions with Arguments of Two Immediates}
 \begin{equation}
 \begin{aligned}
-    \using &l_A = \instructions_{\imath+1} \bmod 2^3 \,,\quad&
-    \using &l_X = \min(4, l_A) \\
-    \using &l_{Y_1} = \min(4, \max(0, \ell - l_A - 1)) \,,\quad&
-    \using &l_{Y_2} = \min(l_{Y_1}, 8 - l_A) \\
-    &\immed_X \equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \,,\quad&
-    &\immed_Y \equiv \sext_{l_{Y_1}}(\de_{l_{Y_2}}(\instructions_{\imath+2+l_A\dots+l_{Y_2}}))
+    \using l_X &= \min(4, \instructions_{\imath+1} \bmod 8) \,,\quad&
+    \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \\
+    \using l_Y &= \min(4, \max(0, \ell - l_X - 1)) \,,\quad&
+    \immed_Y &\equiv \sext_{l_Y}(\de_{l_Y}(\instructions_{\imath+2+l_X\dots+l_Y}))
 \end{aligned}
 \end{equation}
 
@@ -317,12 +315,10 @@ We assume the skip length $\ell$ is well-defined:
     \using r_A &= \min(12, \instructions_{\imath+1} \bmod 16) \,,\quad&
     \reg_A &\equiv \reg_{r_A} \,,\quad
     \reg'_A \equiv \reg'_{r_A} \\
-    \using l_A &= (\ffrac{\instructions_{\imath+1}}{16} \bmod 8) \,,\quad&
-    \using l_X &= \min(4, \max(0, l_A)) \\
-    \using l_{Y_1} &= \min(4, \max(0, \ell - l_A - 1)) \,,\quad&
-    \using l_{Y_2} &= \min(l_{Y_1}, 8 - l_A) \\
-    \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \,,\quad&
-    \immed_Y &\equiv \sext_{l_{Y_1}}(\de_{l_{Y_2}}(\instructions_{\imath+2+l_A\dots+l_{Y_2}}))
+    \using l_X &= \min(4, \ffrac{\instructions_{\imath+1}}{16} \bmod 8) \,,\quad&
+    \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \\
+    \using l_Y &= \min(4, \max(0, \ell - l_X - 1)) \,,\quad&
+    \immed_Y &= \sext_{l_Y}(\de_{l_Y}(\instructions_{\imath+2+l_X\dots+l_Y}))
 \end{aligned}
 \end{equation}
 
@@ -341,15 +337,13 @@ We assume the skip length $\ell$ is well-defined:
 \subsubsection{Instructions with Arguments of One Register, One Immediate and One Offset}
 \begin{equation}
   \begin{aligned}
-      \using r_A &= \min(12, (\instructions_{\imath+1}) \bmod 16) \,,\quad&
+      \using r_A &= \min(12, \instructions_{\imath+1} \bmod 16) \,,\quad&
       \reg_A &\equiv \reg_{r_A} \,,\quad
       \reg'_A \equiv \reg'_{r_A} \\
-      \using l_A &= (\ffrac{\instructions_{\imath+1}}{16} \bmod 8) \,,\quad&
-      \using l_X &= \min(4, \max(0, l_A)) \\
-      \using l_{Y_1} &= \min(4, \max(0, \ell - l_A - 1)) \,,\quad&
-      \using l_{Y_2} &= \min(l_{Y_1}, 8 - l_A) \\
-      \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \,,\quad&
-      \immed_Y &\equiv \imath + \signfunc{l_{Y_1}}(\de_{l_{Y_2}}(\instructions_{\imath+2+l_A\dots+l_{Y_2}}))
+      \using l_X &= \min(4, \ffrac{\instructions_{\imath+1}}{16} \bmod 8) \,,\quad&
+      \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \\
+      \using l_Y &= \min(4, \max(0, \ell - l_X - 1)) \,,\quad&
+      \immed_Y &= \imath + \signfunc{l_Y}(\de_{l_Y}(\instructions_{\imath+2+l_X\dots+l_Y}))
   \end{aligned}
 \end{equation}
 
@@ -502,12 +496,10 @@ In the case that the above condition is not met, then the instruction is conside
     \using r_B &= \min(12, \ffrac{\instructions_{\imath+1}}{16}) \,,\quad&
     \reg_B &\equiv \reg_{r_B} \,,\quad
     \reg'_B \equiv \reg'_{r_B} \\
-    \using l_A &= \instructions_{\imath+2} \bmod 8 \,,\quad&
-    \using l_X &= \min(4, l_A) \\
-    \using l_{Y_1} &= \min(4, \max(0, \ell - l_A - 2)) \,,\quad&
-    \using l_{Y_2} &= \min(l_{Y_1}, 8 - l_A) \\
-    \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+3\dots+l_X})) \,,\quad&
-    \immed_Y &\equiv \sext_{l_{Y_1}}(\de_{l_{Y_2}}(\instructions_{\imath+3+l_A\dots+l_{Y_2}}))
+    \using l_X &= \min(4, \instructions_{\imath+2} \bmod 8) \,,\quad&
+    \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions_{\imath+3\dots+l_X})) \\
+    \using l_Y &= \min(4, \max(0, \ell - l_X - 2)) \,,\quad&
+    \immed_Y &= \sext_{l_Y}(\de_{l_Y}(\instructions_{\imath+3+l_X\dots+l_Y}))
   \end{aligned}
 \end{equation}
 
