Swap arguments for instructions taking two regs

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -370,12 +370,12 @@ We assume the skip length $\ell$ is well-defined:
 \subsubsection{Instructions with Arguments of Two Registers}
 \begin{equation}
 \begin{aligned}
-  \using r_A &= \min(12, (\instructions_{\imath+1}) \bmod 16) \,,\quad&
-  \reg_A &\equiv \reg_{r_A} \,,\quad
-  \reg'_A \equiv \reg'_{r_A} \\
-  \using r_D &= \min(12, \ffrac{\instructions_{\imath+1}}{16}) \,,\quad&
+  \using r_D &= \min(12, (\instructions_{\imath+1}) \bmod 16) \,,\quad&
   \reg_D &\equiv \reg_{r_D} \,,\quad
   \reg'_D \equiv \reg'_{r_D} \\
+  \using r_A &= \min(12, \ffrac{\instructions_{\imath+1}}{16}) \,,\quad&
+  \reg_A &\equiv \reg_{r_A} \,,\quad
+  \reg'_A \equiv \reg'_{r_A} \\
 \end{aligned}
 \end{equation}
 
